[package]
name = "search"
version = "0.1.0"
authors = ["James Little <littleguy23@gmail.com>", "Muji <muji@tmpfs.org>"]
description = "Search index library"
categories = ["wasm"]
exclude = ['/test/']
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
rmp-serde = "0.14.3"
serde_json = "1.0"
console_error_panic_hook = "0.1.6"
num-format = "0.4.0"
rust-stemmers = "1.2.0"
htmlescape = "0.3.1"
thiserror = "1"

# Be careful if you update wasm-bindgen, an earlier
# attempt to upgrade to 0.2.68 broke wasm-pack :(
[dependencies.wasm-bindgen]
version = "0.2.59"
features = ["serde-serialize"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
